# FiliedCode

./: .gitignore  CMakeLists.txt  Codegen.cpp  Codegen.h  Lexer.h  Parser.cpp  Parser.h  README.md  demonstration.fc  demonstration.txt  main.cpp
docs/: demonstration.fc
fc_tests/: demonstration_2.fc  my_lib.fc
src/: Codegen.cpp  Codegen.h  Debug.cpp  Debug.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  main.cpp
test_files/: math_test.fc
tests/: hello.fc  ifTest.fc  inputTest.fc  type_test.fc  var_test.fc  while_for.fc
